# boffyn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: npm.yml  pypi.yml
boffyn/: __init__.py
docs/: Makefile  changelog.rst  conf.py  index.rst
npm/: README.md  package.json
npm/scripts/: postinstall.js
