[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boffyn"
version = "0.0.1"
description = "Install and manage your self-hosted docker compose stack with one manifest"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Software Distribution",
]

[project.scripts]
boffyn = "boffyn:main"

[project.urls]
Homepage = "https://github.com/boffyn/boffyn"

[tool.setuptools.packages.find]
include = ["boffyn*"]
